--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <li><a href="">Вопрос-ответ</a></li>
         <li><a href="">Контакты</a></li>
     </ul>
+    <ul class="mainnav">
+    </ul>
 </nav>
 </body>
 </html>
