--- a/index.html
+++ b/index.html
@@ -5,20 +5,41 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/css/style.css">
     <title>Beauty</title>
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<nav>
-    <ul class="subnav">
-        <li><a href="">Доставка</a></li>
-        <li><a href="">Оплата</a></li>
-        <li><a href="">Отзывы</a></li>
-        <li><a href="">Вопрос-ответ</a></li>
-        <li><a href="">Контакты</a></li>
-    </ul>
-    <ul class="mainnav">
-    </ul>
-</nav>
+<header>
+    <div class="wrapper">
+        <nav>
+            <ul class="nav">
+                <li><a href="">Доставка</a></li>
+                <li><a href="">Оплата</a></li>
+                <li><a href="">Отзывы</a></li>
+                <li><a href="">Вопрос-ответ</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="bg-white">
+        <div class="header">
+            <div class="wrapper">
+                <div class="header-top">
+                    <div class="logo">BEAUTY
+                    </div>
+                    <div class="header-info">
+                        <span>8 (812) 123-45-67</span>
+                        <button type="button">Обратный звонок</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+    </div>
+</header>
 </body>
 </html>
