--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <div class="wrapper">
         <nav>
             <ul class="nav">
-                <li><a href="">Доставка</a></li>
+                <li>
+                    <a href="">Доставка</a>
+                </li>
                 <li><a href="">Оплата</a></li>
                 <li><a href="">Отзывы</a></li>
                 <li><a href="">Вопрос-ответ</a></li>
@@ -29,7 +31,9 @@
         <div class="header">
             <div class="wrapper">
                 <div class="header-top">
-                    <div class="logo">BEAUTY
+                    <div class="logo">
+                        <img src="assets/img/logo.svg" alt="logo">
+                        BEAUTY
                     </div>
                     <div class="header-info">
                         <span>8 (812) 123-45-67</span>
